Bug 2032929 - Fix overflow-wrap issues for Settings > Applications card r=desktop-theme-reviewers,tgiles
Differential Revision: https://phabricator.services.mozilla.com/D295045

--- a/browser/themes/shared/preferences/preferences.css
+++ b/browser/themes/shared/preferences/preferences.css
@@ -401,6 +401,13 @@ setting-group:has(> moz-card).spotlight {
 }
 /** SRD applications section END **/
 
+/* Override overflow-wrap: anywhere from moz-card
+ TODO: Eventually we should update to make this
+ section more responsive to screen width */
+moz-fieldset#applicationsGroup {
+  overflow-wrap: normal;
+}
+
 #handlersView {
   height: 25em;
   margin-inline-end: 0;
